# heasoftpy

./: .gitignore  .gitlab-ci.yml  CHANGES.md  LICENSE  README  README.md  __init__.py  bash_loop.sh  clean-build.py  clean_heasoftpy.py  install.py  local-build.py  pfiles_list.txt  pyproject.toml  pytest.ini  requirements.txt  result.py  setup.py  simple_run.py  time_loops.sh  update_history  utils.py
ape/: __init__.py  ape.py
contrib/: sample.py
core/: errors.py  result.py
heasoftpy/: __init__.py  _ixpe.py  config.py  core.py  utils.py  version.py
heasoftpy/contrib/: __init__.py
heasoftpy/contrib/template/: __init__.py  template.py  template_lib.py
heasoftpy/fcn/: __init__.py  ftlist.py
licenses/: IXPE-SSDC-LICENSE.rst  IXPE-USRA-LICENSE.rst
notebooks/: NICER processing.ipynb  from_tess.ipynb  generate-html-doc.py  generate-html.sh  getting-started.ipynb  getting-started.md  heasoftpy_testing.ipynb  nicer-example.ipynb  nicer-example.md  nustar-example.md  nustar_example.ipynb  template.html
onthefly/: __init__.py
par_reader/: __init__.py  par_reader.py
program_version/: version.py
template/: __init__.py  setup.py  template.py  template.py.html  template_lib.py
tests/: context.py  test.fits  test_HSPTask.py  test_basic.py  test_package_template.py  test_par_reader.py  test_param_reader.py  test_params.py  test_program_version.py  test_tasks.py  test_tasks_fly.py  test_tasks_write_fn.py  test_utils.py
utils/: __init__.py  clean_heasoftpy.py  utils.py
write_fns/: __init__.py
