[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "heasoftpy"
authors = [
  { name="HEASARC", email="heasarc-hd@athena.gsfc.nasa.gov" },
]
maintainers = [
    { name="Abdu Zoghbi", email="a.zoghbi@nasa.gov" },
]
description = "Python interface for Heasoft"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["astronomy", "heasoft", "heasarc"]
license = {text = "LICENSE"}
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://heasarc.gsfc.nasa.gov/lheasoft/heasoftpy/"

[tool.setuptools.packages.find]
include = ["heasoftpy*"]
exclude = ["notebook*", "licences*", "template*", "tests*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "heasoftpy.version.__version__"}

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.cmdclass]
build_py = "install.HSPInstallCommand"
